[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/GameMap/GameMap.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GameMap/BoardCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GameMap/Cursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/GameMap/UnitOverlay.gd" type="Script" id=4]
[ext_resource path="res://Media/maps/grid_tile.png" type="Texture" id=5]
[ext_resource path="res://Resources/editor_overlay_tileset.tres" type="TileSet" id=6]

[sub_resource type="TileSet" id=1]
0/name = "grid_tile.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="GameMap" type="TileMap"]
tile_set = SubResource( 1 )
format = 1
script = ExtResource( 1 )

[node name="TerrainOverlay" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
format = 1
script = ExtResource( 4 )

[node name="Cursor" parent="." instance=ExtResource( 3 )]

[node name="MouseCamera" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 1, 2 )

[connection signal="accept_pressed" from="Cursor" to="." method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="Cursor" to="MouseCamera" method="_on_Cursor_moved"]
[connection signal="camera_moved" from="MouseCamera" to="Cursor" method="_on_BoardCamera_camera_moved"]
